[gd_scene load_steps=8 format=3 uid="uid://doo77a1vfcsws"]

[ext_resource type="Script" path="res://scenes/screens/inicio.gd" id="1_w0xhw"]
[ext_resource type="Theme" uid="uid://dbjmv7rcvq2m7" path="res://themes/theme_hud.tres" id="2_box0m"]
[ext_resource type="Texture2D" uid="uid://qj4f60651beo" path="res://assets/original/backgrounds/lafuriadelastrenzas.png" id="2_mog17"]
[ext_resource type="Texture2D" uid="uid://cuhp07010skgo" path="res://assets/created/lagrima_scaled_2x.png" id="4_5k0ma"]
[ext_resource type="AudioStream" uid="uid://dt5yvc1bg8jiy" path="res://assets/created/musica/Bombo Leguero Intro.mp3" id="5_eyd00"]
[ext_resource type="PackedScene" uid="uid://bc8o4p1i67cbn" path="res://scenes/patricios/general.tscn" id="6_nliy4"]
[ext_resource type="PackedScene" uid="uid://prplx1wymlg5" path="res://scenes/common/unit_spawner.tscn" id="7_pjvl7"]

[node name="Inicio" type="CanvasLayer"]
script = ExtResource("1_w0xhw")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Fondo" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)

[node name="Lafuriadelastrenzas" type="Sprite2D" parent="Control"]
position = Vector2(320.56, 136.749)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_mog17")

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 641.0
offset_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Comenzar" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_box0m")
theme_override_font_sizes/font_size = 24
text = "Comenzar"

[node name="Mejoras" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_box0m")
theme_override_font_sizes/font_size = 20
text = "Mejoras"

[node name="Opciones" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_box0m")
text = "Opciones"

[node name="Creditos" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_box0m")
text = "Creditos"

[node name="Salir" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_box0m")
text = "Salir"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="Lagrima" type="TextureRect" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_5k0ma")
stretch_mode = 5

[node name="CantidadLagrimas" type="Label" parent="Control/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme = ExtResource("2_box0m")
theme_override_font_sizes/font_size = 16

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_eyd00")
autoplay = true
bus = &"Musica"

[node name="General" parent="." instance=ExtResource("6_nliy4")]
position = Vector2(90, 446)
input_accepted = false

[node name="UnitSpawner" parent="." instance=ExtResource("7_pjvl7")]
position = Vector2(-42, 445)
probabilitySpawnOnTimer = 0.0
faction = "patricios"
respawn_seconds = 1.0

[node name="PosicionGeneral" type="Marker2D" parent="."]
position = Vector2(47, 450)

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Comenzar" to="." method="_on_comenzar_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Mejoras" to="." method="_on_mejoras_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Opciones" to="." method="_on_opciones_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Salir" to="." method="_on_salir_pressed"]
